--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="shortcut icon" href="/media/Kitsuroid.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div id="frame">
+    <main>
         <div class="grid-box">
             <div id="wrapper">
                 <button id="clear-btn" class="calc-btn" onclick="clearValue()">C</button>
-                <input type="text" id="calc-display" placeholder="0"></input>
+                <input type="text" id="calc-display" placeholder="0">
             </div>
             <button name="0" id="btn0" class="calc-btn" onclick="printValue(0)">0</button>
             <button name="1" id="btn1" class="calc-btn" onclick="printValue(1)">1</button>
@@ -31,8 +33,12 @@
             <button name="dec" id="btn-dec" class="calc-btn" onclick="printValue('.')">.</button>
             <button name="eq" id="btn-eq" class="calc-btn" onclick="calc()">=</button>
         </div>
-    </div>
-    <footer>Copyright &copy2020 by Grigorije Bogdanovic. All Right Reserved.</footer>
+    </main>
+    <footer>
+        <div id="credits">
+            <a href="https://www.github.com/volperoid"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
+        </div>
+    </footer>
     <script src="js/engine.js"></script>
 </body>
 </html>
