--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="shortcut icon" href="/media/Kitsuroid.png" type="image/png">
+    <link rel="shortcut icon" href="/media/blob.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -39,6 +39,7 @@
             <a href="https://www.github.com/volperoid"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
         </div>
     </footer>
+    <img id="blob" src="media/blob.png" width="5%" alt="">
     <script src="js/engine.js"></script>
 </body>
 </html>
