--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <a href="https://www.github.com/volperoid"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
         </div>
     </footer>
-    <img id="blob" src="media/blob.png" width="5%" alt="">
+    <img id="blob" src="media/blob-grounded.png" alt="blob" width="5%">
+    <img id="poop" src="/media/poop-solid.png" alt="poop" width="2.8%">
     <script src="js/engine.js"></script>
 </body>
 </html>
