--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
     <footer>
         <div id="credits">
-            <a href="https://www.github.com/volperoid"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
+            <a href="https://www.github.com/volperoid/bondi.html"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
         </div>
     </footer>
     <img id="blob" src="media/blob-grounded.png" alt="blob" width="5%">
