--- a/bondi.html
+++ b/bondi.html
@@ -11,7 +11,7 @@
     <header class="bg-19283f">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img id="logo" src="logo.png" alt="Logo"></a>
+                <a class="navbar-brand" href="#"><img id="logo" src="media/logo.png" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -37,7 +37,7 @@
                     <form id="search-bar">
                         <input id="search-input" type="search" placeholder="Search..." aria-label="search">
                         <button id="search-btn" class="btn" type="submit">
-                            <img src="search-icon.png" alt="search-icon">
+                            <img src="media/search-icon.png" alt="search-icon">
                         </button>
                     </form>
                     <button type="submit" id="login-btn" class="btn">Login</button>
@@ -55,22 +55,22 @@
             <div class="container">
                 <div class="title_card">
                     <div class="img_div">
-                        <img src="section_logo.png" alt="section-logo-yellow">
+                        <img src="media/section_logo.png" alt="section-logo-yellow">
                     </div>
                     <h2>We are Good at</h2>
                     <h6>SOME OF THESE AND MANY MORE</h6>
                     <div id="hr-separator">
-                        <img src="hr_line.png" alt="horizontal-line">
+                        <img src="media/hr_line.png" alt="horizontal-line">
                     </div>
                 </div>
                 <div class="flex-row-center">
                     <div class="service">
                         <div class="image_stack">
                             <div class="frame-index-1">
-                                <img src="bg-one.png" alt="number-one-gray">
+                                <img src="media/bg-one.png" alt="number-one-gray">
                             </div>
                             <div class="frame-index-2">
-                                <img src="pencil.png" alt="blue-pencil">
+                                <img src="media/pencil.png" alt="blue-pencil">
                             </div>
                         </div>
                         <h3>GRAPHIC DESIGN</h3>
@@ -85,7 +85,7 @@
                     <div class="service">
                         <div class="image_stack">
                             <div class="frame-index-1">
-                                <img src="bg-two.png" alt="number-one-gray">
+                                <img src="media/bg-two.png" alt="number-one-gray">
                             </div>
                             <div class="frame-index-2">
                                 <img src="screen.png" alt="blue-pencil">
@@ -101,10 +101,10 @@
                     <div class="service">
                         <div class="image_stack">
                             <div class="frame-index-1">
-                                <img src="bg-three.png" alt="number-one-gray">
+                                <img src="media/bg-three.png" alt="number-one-gray">
                             </div>
                             <div class="frame-index-2">
-                                <img src="plug.png" alt="blue-pencil">
+                                <img src="media/plug.png" alt="blue-pencil">
                             </div>
                         </div>
                         <h3>APP DESIGN</h3>
@@ -122,12 +122,12 @@
             <div class="container">
                 <div class="title_card">
                     <div class="img_div">
-                        <img src="section_logo.png" alt="section-logo-yellow">
+                        <img src="media/section_logo.png" alt="section-logo-yellow">
                     </div>
                     <h2>We Make This</h2>
                     <h6>PREPARE TO BE AMAZED</h6>
                     <div id="hr-separator">
-                        <img src="hr_line.png" alt="horizontal-line">
+                        <img src="media/hr_line.png" alt="horizontal-line">
                     </div>
                 </div>
                 <div id="carousel-nav">
@@ -166,12 +166,12 @@
             <div class="container">
                 <div class="title_card">
                     <div class="img_div">
-                        <img src="section_logo.png" alt="section-logo-yellow">
+                        <img src="media/section_logo.png" alt="section-logo-yellow">
                     </div>
                     <h2>Some Stuff About Us</h2>
                     <h6>THE GREAT TEAM</h6>
                     <div id="hr-separator">
-                        <img src="hr_line.png" alt="horizontal-line">
+                        <img src="media/hr_line.png" alt="horizontal-line">
                     </div>
                 </div>
             </div>
