--- a/bondi.html
+++ b/bondi.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
-                    <img class="divider" src="divider.png" alt="divider">
+                    <img class="divider" src="media/divider.png" alt="divider">
                     <form id="search-bar">
                         <input id="search-input" type="search" placeholder="Search..." aria-label="search">
                         <button id="search-btn" class="btn" type="submit">
@@ -88,7 +88,7 @@
                                 <img src="media/bg-two.png" alt="number-one-gray">
                             </div>
                             <div class="frame-index-2">
-                                <img src="screen.png" alt="blue-pencil">
+                                <img src="media/screen.png" alt="computer-screen">
                             </div>
                         </div>
                         <h3>WEB DESIGN</h3>
