--- a/index.html
+++ b/index.html
@@ -7,40 +7,38 @@
     <link rel="shortcut icon" href="/media/blob.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <!-- * <link rel="stylesheet" href="css/main.css">-->
+    <link rel="stylesheet" href="css/dark.css">
 </head>
 <body>
     <main>
         <div class="grid-box">
             <div id="wrapper">
-                <button id="clear-btn" class="calc-btn" onclick="clearValue()">C</button>
+                <button id="clear-btn" class="calc-btn" onclick="clearValue()"><span id="span-clear">C</span></button>
                 <input type="text" id="calc-display" placeholder="0">
             </div>
-            <button name="0" id="btn0" class="calc-btn" onclick="printValue(0)">0</button>
-            <button name="1" id="btn1" class="calc-btn" onclick="printValue(1)">1</button>
-            <button name="2" id="btn2" class="calc-btn" onclick="printValue(2)">2</button>
-            <button name="3" id="btn3" class="calc-btn" onclick="printValue(3)">3</button>
-            <button name="4" id="btn4" class="calc-btn" onclick="printValue(4)">4</button>
-            <button name="5" id="btn5" class="calc-btn" onclick="printValue(5)">5</button>
-            <button name="6" id="btn6" class="calc-btn" onclick="printValue(6)">6</button>
-            <button name="7" id="btn7" class="calc-btn" onclick="printValue(7)">7</button>
-            <button name="8" id="btn8" class="calc-btn" onclick="printValue(8)">8</button>
-            <button name="9" id="btn9" class="calc-btn" onclick="printValue(9)">9</button>
-            <button name="add" id="btn-add" class="calc-btn" onclick="printValue('+')">+</button>
-            <button name="sub" id="btn-sub" class="calc-btn" onclick="printValue('-')">-</button>
-            <button name="multi" id="btn-multi" class="calc-btn" onclick="printValue('*')">*</button>
-            <button name="div" id="btn-div" class="calc-btn" onclick="printValue('/')">/</button>
-            <button name="dec" id="btn-dec" class="calc-btn" onclick="printValue('.')">.</button>
-            <button name="eq" id="btn-eq" class="calc-btn" onclick="calc()">=</button>
+            <button name="0" id="btn0" class="calc-btn"><span id="span0" onclick="printValue(0)">0</span></button>
+            <button name="1" id="btn1" class="calc-btn"><span id="span1" onclick="printValue(1)">1</span></button>
+            <button name="2" id="btn2" class="calc-btn"><span id="span2" onclick="printValue(2)">2</span></button>
+            <button name="3" id="btn3" class="calc-btn"><span id="span3" onclick="printValue(3)">3</span></button>
+            <button name="4" id="btn4" class="calc-btn"><span id="span4" onclick="printValue(4)">4</span></button>
+            <button name="5" id="btn5" class="calc-btn"><span id="span5" onclick="printValue(5)">5</span></button>
+            <button name="6" id="btn6" class="calc-btn"><span id="span6" onclick="printValue(6)">6</span></button>
+            <button name="7" id="btn7" class="calc-btn"><span id="span7" onclick="printValue(7)">7</span></button>
+            <button name="8" id="btn8" class="calc-btn"><span id="span8" onclick="printValue(8)">8</span></button>
+            <button name="9" id="btn9" class="calc-btn"><span id="span9" onclick="printValue(9)">9</span></button>
+            <button name="add" id="btn-add" class="calc-btn"><span id="span-add" onclick="printValue('+')">+</span></button>
+            <button name="sub" id="btn-sub" class="calc-btn"><span id="span-sub" onclick="printValue('-')">-</span></button>
+            <button name="multi" id="btn-multi" class="calc-btn"><span id="span-multi" onclick="printValue('*')">*</span></button>
+            <button name="div" id="btn-div" class="calc-btn"><span id="span-div" onclick="printValue('/')">/</span></button>
+            <button name="dec" id="btn-dec" class="calc-btn"><span id="span-dec" onclick="printValue('.')">.</span></button>
+            <button name="eq" id="btn-eq" class="calc-btn"><span id="span-eq" onclick="calc()">=</span></button>
         </div>
     </main>
     <footer>
-        <div id="credits">
-            <a href="https://volperoid.github.io/bondi.html"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
-        </div>
+        <a id="github" href="https://volperoid.github.io/bondi.html"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
     </footer>
-    <img id="blob" src="media/blob-grounded.png" alt="blob" width="5%">
-    <img id="poop" src="/media/poop-solid.png" alt="poop" width="2.8%">
+    <img id="blob" src="media/blob-grounded.png" alt="blob" width="2.5%">
     <script src="js/engine.js"></script>
 </body>
 </html>
