--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </div>
     </main>
     <footer>
-        <a id="github" href="https://volperoid.github.io/bondi.html"><i id="github-icon" class="fa fa-github"></i>volperoid</a>
+        <a id="github" href="https://volperoid.github.io/bondi.html"><i id="github-icon" class="fa fa-github">Bondi Theme</a>
+        <a id="github" href="https://volperoid.github.io/bondi.html">Array Evaluator</a>
     </footer>
     <img id="blob" src="media/blob-grounded.png" alt="blob" width="2.5%">
     <script src="js/engine.js"></script>
