Updated Array Evaluator files

--- a/chain.html
+++ b/chain.html
@@ -30,13 +30,11 @@
         <input type="number" value="" placeholder="--" id="i18">
         <input type="number" value="" placeholder="--" id="i19">
     </div>
-
     <div>
         <button type="submit" onclick="scan()">Scan</button>
         <button type="submit" onclick="clear()">Clear</button>
     </div>
-
     <p id="status"></p>
-    <script src="scan.js"></script>
+    <script src="arrayEvaluator.js"></script>
 </body>
 </html>
