--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="shortcut icon" href="/media/blob.png" type="image/png">
+    <link rel="shortcut icon" href="/media/.png/blob.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- * <link rel="stylesheet" href="css/main.css">-->
@@ -40,7 +40,7 @@
             <a id="github" href="https://volperoid.github.io/bondi.html">Array Evaluator</a>
         </i>
     </footer>
-    <img id="blob" src="media/blob-grounded.png" alt="blob" width="2.5%">
+    <img id="blob" src="media/.png/blob-grounded.png" alt="blob" width="2.5%">
     <script src="js/calculator/printValue.js"></script>
     <script src="js/calculator/clearValue.js"></script>
     <script src="js/calculator/calculate.js"></script>
