--- a/bondi.html
+++ b/bondi.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/bondi.css">
-    <link rel="shortcut icon" href="media/.png/blob.png" type="image/png">
+    <link rel="shortcut icon" href="media/png/blob.png" type="image/png">
     <title>Bondi Theme</title>
 </head>
 <body>
     <header class="bg-19283f">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img id="logo" src="media/.png/logo.png" alt="Logo"></a>
+                <a class="navbar-brand" href="#"><img id="logo" src="media/png/logo.png" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,11 +34,11 @@
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
-                    <img class="divider" src="media/.png/divider.png" alt="divider">
+                    <img class="divider" src="media/png/divider.png" alt="divider">
                     <form id="search-bar">
                         <input id="search-input" type="search" placeholder="Search..." aria-label="search">
                         <button id="search-btn" class="btn" type="submit">
-                            <img src="media/.png/search-icon.png" alt="search-icon">
+                            <img src="media/png/search-icon.png" alt="search-icon">
                         </button>
                     </form>
                     <button type="submit" id="login-btn" class="btn">Login</button>
@@ -56,22 +56,22 @@
             <div class="container">
                 <div class="title_card">
                     <div class="img_div">
-                        <img src="media/.png/section_logo.png" alt="section-logo-yellow">
+                        <img src="media/png/section_logo.png" alt="section-logo-yellow">
                     </div>
                     <h2>We are Good at</h2>
                     <h6>SOME OF THESE AND MANY MORE</h6>
                     <div id="hr-separator">
-                        <img src="media/.png/hr_line.png" alt="horizontal-line">
+                        <img src="media/png/hr_line.png" alt="horizontal-line">
                     </div>
                 </div>
                 <div class="flex-row-center">
                     <div class="service">
                         <div class="image_stack">
                             <div class="frame-index-1">
-                                <img src="media/.png/bg-one.png" alt="number-one-gray">
+                                <img src="media/png/bg-one.png" alt="number-one-gray">
                             </div>
                             <div class="frame-index-2">
-                                <img src="media/.png/pencil.png" alt="blue-pencil">
+                                <img src="media/png/pencil.png" alt="blue-pencil">
                             </div>
                         </div>
                         <h3>GRAPHIC DESIGN</h3>
@@ -86,10 +86,10 @@
                     <div class="service">
                         <div class="image_stack">
                             <div class="frame-index-1">
-                                <img src="media/.png/bg-two.png" alt="number-one-gray">
+                                <img src="media/png/bg-two.png" alt="number-one-gray">
                             </div>
                             <div class="frame-index-2">
-                                <img src="media/.png/screen.png" alt="computer-screen">
+                                <img src="media/png/screen.png" alt="computer-screen">
                             </div>
                         </div>
                         <h3>WEB DESIGN</h3>
@@ -102,10 +102,10 @@
                     <div class="service">
                         <div class="image_stack">
                             <div class="frame-index-1">
-                                <img src="media/.png/bg-three.png" alt="number-one-gray">
+                                <img src="media/png/bg-three.png" alt="number-one-gray">
                             </div>
                             <div class="frame-index-2">
-                                <img src="media/.png/plug.png" alt="blue-pencil">
+                                <img src="media/png/plug.png" alt="blue-pencil">
                             </div>
                         </div>
                         <h3>APP DESIGN</h3>
@@ -123,12 +123,12 @@
             <div class="container">
                 <div class="title_card">
                     <div class="img_div">
-                        <img src="media/.png/section_logo.png" alt="section-logo-yellow">
+                        <img src="media/png/section_logo.png" alt="section-logo-yellow">
                     </div>
                     <h2>We Make This</h2>
                     <h6>PREPARE TO BE AMAZED</h6>
                     <div id="hr-separator">
-                        <img src="media/.png/hr_line.png" alt="horizontal-line">
+                        <img src="media/png/hr_line.png" alt="horizontal-line">
                     </div>
                 </div>
                 <div id="carousel-nav">
@@ -167,12 +167,12 @@
             <div class="container">
                 <div class="title_card">
                     <div class="img_div">
-                        <img src="media/.png/section_logo.png" alt="section-logo-yellow">
+                        <img src="media/png/section_logo.png" alt="section-logo-yellow">
                     </div>
                     <h2>Some Stuff About Us</h2>
                     <h6>THE GREAT TEAM</h6>
                     <div id="hr-separator">
-                        <img src="media/.png/hr_line.png" alt="horizontal-line">
+                        <img src="media/png/hr_line.png" alt="horizontal-line">
                     </div>
                 </div>
             </div>
