--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="shortcut icon" href="media/.png/blob.png" type="image/png">
+    <link rel="shortcut icon" href="media/png/blob.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/calculator.css">
@@ -32,7 +32,7 @@
         <button name="dec" id="btn-dec" class="calc-btn"><span id="span-dec" onclick="printValue('.')">.</span></button>
         <button name="eq" id="btn-eq" class="calc-btn"><span id="span-eq" onclick="calculate()">=</span></button>
     </div>
-    <img id="blob" src="media/.png/blob-grounded.png" alt="blob" width="2.5%">
+    <img id="blob" src="media/png/blob-grounded.png" alt="blob" width="2.5%">
     <script src="js/calculator/calculator.js"></script>
 </body>
 </html>
