--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </style>
 </head>
 <body>
-    <img id="doorlight" src="/media/svg/doorlight.svg"
-    onmouseover="this.src='/media/svg/doorlight2.svg'"
-    onmouseout="this.src='/media/svg/doorlight.svg'"
+    <img id="doorlight" src="/media/svg/doorlight-closed.svg"
+    onmouseover="this.src='/media/svg/doorlight-open.svg'"
+    onmouseout="this.src='/media/svg/doorlight-closed.svg'"
     alt="open-door-light" width="33%"/>
 </body>
 </html>
