--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </span>
             </a>
             <div id="nav-arrow">
-                <a href="#section-0">
+                <a href="#heading-0">
                     <i class="fas fa-angle-down fa-3x"></i>
                 </a>
             </div>
